kernel config: Add more crap

--- a/data/kernel.wanted.config
+++ b/data/kernel.wanted.config
@@ -12,6 +12,8 @@ CONFIG_ACPI_DPTF=y
 CONFIG_ACPI_FAN=y
 CONFIG_ACPI_FPDT=y
 CONFIG_ACPI_HMAT=y
+CONFIG_ACPI_PCC=y
+CONFIG_ACPI_TAD=m
 CONFIG_ACPI_THERMAL=y
 CONFIG_ACPI_VIOT=y
 CONFIG_ACPI_WMI=m
@@ -40,6 +42,9 @@ CONFIG_AUFS_BDEV_LOOP=y
 CONFIG_AUFS_BRANCH_MAX_127=y
 CONFIG_AUFS_FS=y
 CONFIG_AUFS_SBILIST=y
+CONFIG_AUTOFS4_FS=m
+CONFIG_AUTOFS_FS=m
+CONFIG_B43LEGACY_DEBUG=n
 CONFIG_B44=n
 CONFIG_BACKLIGHT_88PM860X=m
 CONFIG_BACKLIGHT_AAT2870=m
@@ -117,6 +122,7 @@ CONFIG_BLOCK=y
 CONFIG_BNA=m
 CONFIG_BNX2=m
 CONFIG_BNX2X=m
+CONFIG_BOOTTIME_TRACING=n
 CONFIG_BPFILTER=y
 CONFIG_BPFILTER_UMH=m
 CONFIG_BPF_JIT=y
@@ -125,10 +131,11 @@ CONFIG_BRIDGE=y
 CONFIG_BUILD_SALT=n
 CONFIG_CAIF=n
 CONFIG_CAN_CC770_ISA=
+CONFIG_CAN_CC770_ISA=n
 CONFIG_CAN_EMS_PCMCIA=n
 CONFIG_CAN_SJA1000_ISA=n
 CONFIG_CASSINI=m
-CONFIG_CDROM=y
+CONFIG_CDROM=m
 CONFIG_CEC_NOTIFIER=y
 CONFIG_CEC_PLATFORM_DRIVERS=y
 CONFIG_CGROUP_MISC=y
@@ -150,6 +157,7 @@ CONFIG_CIFS_WEAK_PW_HASH=y
 CONFIG_CISS_SCSI_TAPE=y
 CONFIG_CMDLINE_PARTITION=n
 CONFIG_CNIC=m
+CONFIG_COMEDI=n
 CONFIG_CONFIGFS_FS=y
 CONFIG_CONSOLE_POLL=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
@@ -158,10 +166,14 @@ CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_IDLE_GOV_TEO=y
 CONFIG_CPU_SUP_ZHAOXIN=y
 CONFIG_CRC16=y
+CONFIG_CRC64=m
 CONFIG_CRC_CCITT=y
 CONFIG_CRYPTO=y
 CONFIG_CRYPTO_CRC32C=y
 CONFIG_CRYPTO_CRC32C_INTEL=y
+CONFIG_CRYPTO_CRC64_ROCKSOFT=m
+CONFIG_CRYPTO_CURVE25519=m
+CONFIG_CRYPTO_CURVE25519_X86=m
 CONFIG_CRYPTO_DEV_CHELSIO_TLS=m
 CONFIG_CRYPTO_DEV_NITROX=m
 CONFIG_CRYPTO_DEV_NITROX_CNN55XX=m
@@ -174,11 +186,13 @@ CONFIG_CRYPTO_LIB_CURVE25519_GENERIC=m
 CONFIG_CRYPTO_LZO=y
 CONFIG_CRYPTO_RNG=y
 CONFIG_CRYPTO_RNG_DEFAULT=y
+CONFIG_CXL_BUS=n
 CONFIG_DE2104X=m
 CONFIG_DE600=y
 CONFIG_DE620=y
 CONFIG_DEBUG_FS=y
 CONFIG_DEBUG_INFO_BTF=n
+CONFIG_DECNET=n
 CONFIG_DEFAULT_CODEL=n
 CONFIG_DEFAULT_FQ_CODEL=y
 CONFIG_DEFAULT_NET_SCH="fq_codel"
@@ -214,22 +228,28 @@ CONFIG_DRM_GM12U320=m
 CONFIG_DRM_GMA3600=y
 CONFIG_DRM_GMA500=n
 CONFIG_DRM_GMA600=n
+CONFIG_DRM_GUD=m
 CONFIG_DRM_HYPERV=m
 CONFIG_DRM_I2C_CH7006=m
 CONFIG_DRM_I2C_SIL164=m
 CONFIG_DRM_I915=m
+CONFIG_DRM_I915_FORCE_PROBE="*"
 CONFIG_DRM_I915_GVT=y
 CONFIG_DRM_I915_GVT_KVMGT=m
+CONFIG_DRM_I915_PXP=y
 CONFIG_DRM_KMS_HELPER=y
 CONFIG_DRM_LEGACY=n
 CONFIG_DRM_LOAD_EDID_FIRMWARE=y
+CONFIG_DRM_MGA=n
 CONFIG_DRM_MGAG200=m
 CONFIG_DRM_NOUVEAU=m
 CONFIG_DRM_NOUVEAU_BACKLIGHT=y
 CONFIG_DRM_NOUVEAU_SVM=y
 CONFIG_DRM_QXL=m
+CONFIG_DRM_R128=n
 CONFIG_DRM_RADEON=m
 CONFIG_DRM_RADEON_KMS=y
+CONFIG_DRM_RADEON_USERPTR=y
 CONFIG_DRM_SIMPLEDRM=y
 CONFIG_DRM_TTM=m
 CONFIG_DRM_UDL=m
@@ -245,6 +265,8 @@ CONFIG_E1000E=m
 CONFIG_E100=n
 CONFIG_ECRYPT_FS=m
 CONFIG_ECRYPT_FS_MESSAGING=n
+CONFIG_EDAC_IGEN6=n
+CONFIG_EDAC_LEGACY_SYSFS=n
 CONFIG_EFI=y
 CONFIG_EFIVAR_FS=y
 CONFIG_EFI_ALLOW_SECURE_BOOT_EXIT=y
@@ -254,9 +276,11 @@ CONFIG_EFI_SECURE_BOOT_LOCK_DOWN=y
 CONFIG_EFI_SIGNATURE_LIST_PARSER=y
 CONFIG_EFI_STUB=y
 CONFIG_EFI_VARS=y
+CONFIG_EFS_FS=n
 CONFIG_EISA=n
 CONFIG_EL3=n
 CONFIG_ENCRYPTED_KEYS=y
+CONFIG_ENERGY_MODEL=y
 CONFIG_ENIC=m
 CONFIG_EPIC100=n
 CONFIG_ETHERNET=y
@@ -289,6 +313,8 @@ CONFIG_FB_CARMINE=n
 CONFIG_FB_CIRRUS=n
 CONFIG_FB_CYBER2000=n
 CONFIG_FB_EFI=y
+CONFIG_FB_HGA=n
+CONFIG_FB_HYPERV=n
 CONFIG_FB_I740=n
 CONFIG_FB_INTEL=n
 CONFIG_FB_KYRO=n
@@ -371,6 +397,7 @@ CONFIG_I2C_DESIGNWARE_PLATFORM=y
 CONFIG_I2C_DESIGNWARE_SLAVE=y
 CONFIG_I2C_HID_ACPI=m
 CONFIG_I2C_HID_CORE=m
+CONFIG_I2C_MULTI_INSTANTIATE=m
 CONFIG_I2C_MUX_PINCTRL=m
 CONFIG_I2C_NVIDIA_GPU=m
 CONFIG_I40E=m
