--- a/data/kernel.wanted.config
+++ b/data/kernel.wanted.config
@@ -7,12 +7,14 @@ CONFIG_ACPI_AC=y
 CONFIG_ACPI_ADXL=y
 CONFIG_ACPI_BATTERY=y
 CONFIG_ACPI_BUTTON=y
+CONFIG_ACPI_CUSTOM_DSDT_FILE=n
 CONFIG_ACPI_DEBUGGER=n
 CONFIG_ACPI_DPTF=y
 CONFIG_ACPI_FAN=y
 CONFIG_ACPI_FPDT=y
 CONFIG_ACPI_HMAT=y
 CONFIG_ACPI_PCC=y
+CONFIG_ACPI_TABLE_LIB=y
 CONFIG_ACPI_TAD=m
 CONFIG_ACPI_THERMAL=y
 CONFIG_ACPI_VIOT=y
@@ -1136,6 +1138,7 @@ CONFIG_VIRTIO_BLK=y
 CONFIG_VIRTIO_BLK_SCSI=y
 CONFIG_VIRTIO_FS=m
 CONFIG_VIRTIO_INPUT=m
+CONFIG_VIRTIO_IOMMU=m
 CONFIG_VIRTIO_MENU=y
 CONFIG_VIRTIO_MMIO=y
 CONFIG_VIRTIO_MMIO_CMDLINE_DEVICES=y
