--- a/data/kernel.wanted.config
+++ b/data/kernel.wanted.config
@@ -643,6 +643,7 @@ CONFIG_PCMCIA_NMCLAN=n
 CONFIG_PCMCIA_XIRCOM=n
 CONFIG_PCNET32=n
 CONFIG_PMBUS=m
+CONFIG_PM_WAKELOCKS=n
 CONFIG_POWER_RESET=y
 CONFIG_POWER_RESET_RESTART=y
 CONFIG_POWER_SUPPLY_HWMON=y
@@ -1156,6 +1157,7 @@ CONFIG_VSOCKETS_LOOPBACK=m
 CONFIG_VXGE=m
 CONFIG_WINBOND_840=m
 CONFIG_X86_5LEVEL=n
+CONFIG_X86_ACPI_CPUFREQ=m
 CONFIG_X86_MSR=m
 CONFIG_XFS_FS=y
 CONFIG_ZNET=y
