Enable a bunch of GPIO drivers, among them for intel SoCs

--- a/data/kernel.wanted.config
+++ b/data/kernel.wanted.config
@@ -1,3 +1,29 @@
+CONFIG_PINCTRL_ALDERLAKE=m
+CONFIG_PINCTRL_BAYTRAIL=y
+CONFIG_PINCTRL_BROXTON=m
+CONFIG_PINCTRL_CANNONLAKE=m
+CONFIG_PINCTRL_CEDARFORK=m
+CONFIG_PINCTRL_CHERRYVIEW=y
+CONFIG_PINCTRL_CS47L15=y
+CONFIG_PINCTRL_CS47L35=y
+CONFIG_PINCTRL_CS47L85=y
+CONFIG_PINCTRL_CS47L90=y
+CONFIG_PINCTRL_CS47L92=y
+CONFIG_PINCTRL_DENVERTON=m
+CONFIG_PINCTRL_ELKHARTLAKE=m
+CONFIG_PINCTRL_EMMITSBURG=m
+CONFIG_PINCTRL_GEMINILAKE=m
+CONFIG_PINCTRL_ICELAKE=m
+CONFIG_PINCTRL_INTEL=m
+CONFIG_PINCTRL_JASPERLAKE=m
+CONFIG_PINCTRL_LAKEFIELD=m
+CONFIG_PINCTRL_LEWISBURG=m
+CONFIG_PINCTRL_LYNXPOINT=m
+CONFIG_PINCTRL_MERRIFIELD=m
+CONFIG_PINCTRL_SUNRISEPOINT=m
+CONFIG_PINCTRL_SX150X=y
+CONFIG_PINCTRL_TIGERLAKE=m
+CONFIG_PINCTRL=y
 CONFIG_64BIT_TIME=y
 CONFIG_8139CP=n
 CONFIG_8139TOO=n
@@ -96,6 +122,7 @@ CONFIG_BATTERY_RT5033=m
 CONFIG_BATTERY_RX51=m
 CONFIG_BATTERY_SBS=m
 CONFIG_BATTERY_TWL4030_MADC=m
+CONFIG_BCMA_DRIVER_GPIO=y
 CONFIG_BCMGENET=m
 CONFIG_BE2NET=m
 CONFIG_BINFMT_MISC=y
@@ -132,7 +159,6 @@ CONFIG_BPF_JIT_ALWAYS_ON=y
 CONFIG_BRIDGE=y
 CONFIG_BUILD_SALT=n
 CONFIG_CAIF=n
-CONFIG_CAN_CC770_ISA=
 CONFIG_CAN_CC770_ISA=n
 CONFIG_CAN_EMS_PCMCIA=n
 CONFIG_CAN_SJA1000_ISA=n
@@ -366,6 +392,15 @@ CONFIG_FW_LOADER_COMPRESS=y
 CONFIG_GADGET_UAC1=n
 CONFIG_GENERIC_GPIO=y
 CONFIG_GPIOLIB=y
+CONFIG_GPIOLIB_IRQCHIP=y
+CONFIG_GPIO_ACPI=y
+CONFIG_GPIO_CDEV=y
+CONFIG_GPIO_CDEV_V1=y
+CONFIG_GPIO_PALMAS=y
+CONFIG_GPIO_PCA953X_IRQ=y
+CONFIG_GPIO_RC5T583=y
+CONFIG_GPIO_TPS6586X=y
+CONFIG_GPIO_TPS65910=y
 CONFIG_HAPPYMEAL=n
 CONFIG_HAS_IOMEM=y
 CONFIG_HDMI_LPE_AUDIO=m
@@ -497,6 +532,8 @@ CONFIG_KVM_VFIO=y
 CONFIG_LAN743X=m
 CONFIG_LCD_CLASS_DEVICE=y
 CONFIG_LCD_PLATFORM=y
+CONFIG_LEDS_PCA9532_GPIO=y
+CONFIG_LEDS_PCA955X_GPIO=y
 CONFIG_LIBCRC32C=y
 CONFIG_LOCALVERSION="-openslx"
 CONFIG_LOCK_DOWN_KERNEL_FORCE_CONFIDENTIALITY=n
@@ -507,6 +544,7 @@ CONFIG_MDIO=y
 CONFIG_MEDIA_RC_SUPPORT=y
 CONFIG_MEDIA_SDR_SUPPORT=n
 CONFIG_MEMORY=y
+CONFIG_MFD_SM501_GPIO=y
 CONFIG_MICROCODE=y
 CONFIG_MICROCODE_AMD=y
 CONFIG_MICROCODE_AMD_EARLY=y
@@ -773,6 +811,7 @@ CONFIG_SECURITY_PERF_EVENTS_RESTRICT=y
 CONFIG_SECURITY_SELINUX=n
 CONFIG_SECURITY_SMACK=n
 CONFIG_SEEQ8005=y
+CONFIG_SERIAL_MCTRL_GPIO=y
 CONFIG_SFC=m
 CONFIG_SFC_FALCON=m
 CONFIG_SFC_MCDI_MON=y
@@ -985,6 +1024,7 @@ CONFIG_SQUASHFS_XATTR=y
 CONFIG_SQUASHFS_XZ=y
 CONFIG_SQUASHFS_ZLIB=y
 CONFIG_SSB=y
+CONFIG_SSB_DRIVER_GPIO=y
 CONFIG_SSB_DRIVER_PCICORE=y
 CONFIG_SSB_DRIVER_PCICORE_POSSIBLE=y
 CONFIG_SSB_PCIHOST=y
