--- a/core/modules/zram-swap/data/etc/systemd/system/zram-swap.service
+++ b/core/modules/zram-swap/data/etc/systemd/system/zram-swap.service
@@ -1,8 +1,10 @@
 [Unit]
-Description=Setup zram swap partitions
+Description=Setup zram swap partitions if necessary
 DefaultDependencies=no
 Wants=swap.target
 Before=swap.target
+# As our script checks whether there are other swap partitions available...
+After=setup-partitions.service
 
 [Service]
 Type=oneshot
