kernel config: VMXNET3 should not be builtin

--- a/data/kernel.wanted.config
+++ b/data/kernel.wanted.config
@@ -1190,7 +1190,7 @@ CONFIG_VIRTIO_VSOCKETS=m
 CONFIG_VIRTUALIZATION=y
 CONFIG_VIRT_DRIVERS=y
 CONFIG_VMWARE_VMCI_VSOCKETS=m
-CONFIG_VMXNET3=y
+CONFIG_VMXNET3=m
 CONFIG_VORTEX=m
 CONFIG_VSOCKETS=m
 CONFIG_VSOCKETS_LOOPBACK=m
