kernel config: simplefb and simpledrm break booting some nvidia cards

--- a/data/kernel.wanted.config
+++ b/data/kernel.wanted.config
@@ -278,7 +278,7 @@ CONFIG_DRM_R128=n
 CONFIG_DRM_RADEON=m
 CONFIG_DRM_RADEON_KMS=y
 CONFIG_DRM_RADEON_USERPTR=y
-CONFIG_DRM_SIMPLEDRM=y
+CONFIG_DRM_SIMPLEDRM=n
 CONFIG_DRM_TTM=m
 CONFIG_DRM_UDL=m
 CONFIG_DRM_USB=m
@@ -1042,7 +1042,7 @@ CONFIG_SUNGEM=m
 CONFIG_SUNGEM_PHY=y
 CONFIG_SYMBOLIC_ERRNAME=y
 CONFIG_SYNC_FILE=y
-CONFIG_SYSFB_SIMPLEFB=y
+CONFIG_SYSFB_SIMPLEFB=n
 CONFIG_SYSTEM_REVOCATION_KEYS=n
 CONFIG_SYSTEM_TRUSTED_KEYS=n
 CONFIG_TEHUTI=m
