[remote-access/xorg] Use OutputClass instead of Device for dynamic stuff

--- a/core/modules/xorg/data/etc/X11/xorg.conf.d/40-nvidia-no-screens.conf
+++ b/core/modules/xorg/data/etc/X11/xorg.conf.d/40-nvidia-no-screens.conf
@@ -1,5 +1,6 @@
-Section "Device" 
-    Identifier  "NoScreenNvidia" 
-    Driver      "nvidia" 
-    Option      "AllowEmptyInitialConfiguration" "true" 
+Section "OutputClass"
+    Identifier  "NoScreenNvidia"
+    MatchDriver "nvidia"
+    Driver      "nvidia"
+    Option      "AllowEmptyInitialConfiguration" "true"
 EndSection
