--- a/core/modules/remote-access/data/opt/openslx/remote-access/xorg-virtual.conf
+++ b/core/modules/remote-access/data/opt/openslx/remote-access/xorg-virtual.conf
@@ -1,5 +1,6 @@
-Section "Device"
+Section "OutputClass"
 	Identifier "Device0"
+	MatchDriver "%DRIVER%"
 	Driver "%DRIVER%"
 	Option "VirtualHeads" "1"
 	Option "ModeValidation" "AllowNonEdidModes"
