kernel config: Enable zstd compression for kernel + initrd

--- a/data/kernel.wanted.config
+++ b/data/kernel.wanted.config
@@ -1,29 +1,3 @@
-CONFIG_PINCTRL_ALDERLAKE=m
-CONFIG_PINCTRL_BAYTRAIL=y
-CONFIG_PINCTRL_BROXTON=m
-CONFIG_PINCTRL_CANNONLAKE=m
-CONFIG_PINCTRL_CEDARFORK=m
-CONFIG_PINCTRL_CHERRYVIEW=y
-CONFIG_PINCTRL_CS47L15=y
-CONFIG_PINCTRL_CS47L35=y
-CONFIG_PINCTRL_CS47L85=y
-CONFIG_PINCTRL_CS47L90=y
-CONFIG_PINCTRL_CS47L92=y
-CONFIG_PINCTRL_DENVERTON=m
-CONFIG_PINCTRL_ELKHARTLAKE=m
-CONFIG_PINCTRL_EMMITSBURG=m
-CONFIG_PINCTRL_GEMINILAKE=m
-CONFIG_PINCTRL_ICELAKE=m
-CONFIG_PINCTRL_INTEL=m
-CONFIG_PINCTRL_JASPERLAKE=m
-CONFIG_PINCTRL_LAKEFIELD=m
-CONFIG_PINCTRL_LEWISBURG=m
-CONFIG_PINCTRL_LYNXPOINT=m
-CONFIG_PINCTRL_MERRIFIELD=m
-CONFIG_PINCTRL_SUNRISEPOINT=m
-CONFIG_PINCTRL_SX150X=y
-CONFIG_PINCTRL_TIGERLAKE=m
-CONFIG_PINCTRL=y
 CONFIG_64BIT_TIME=y
 CONFIG_8139CP=n
 CONFIG_8139TOO=n
@@ -496,6 +470,7 @@ CONFIG_JBD2=y
 CONFIG_JME=m
 CONFIG_KERNEL_GZIP=y
 CONFIG_KERNEL_XZ=y
+CONFIG_KERNEL_ZSTD=y
 CONFIG_KEYBOARD_ADC=m
 CONFIG_KEYBOARD_ADP5520=m
 CONFIG_KEYBOARD_ADP5589=m
@@ -680,6 +655,32 @@ CONFIG_PCI_SW_SWITCHTEC=m
 CONFIG_PCMCIA_NMCLAN=n
 CONFIG_PCMCIA_XIRCOM=n
 CONFIG_PCNET32=n
+CONFIG_PINCTRL=y
+CONFIG_PINCTRL_ALDERLAKE=m
+CONFIG_PINCTRL_BAYTRAIL=y
+CONFIG_PINCTRL_BROXTON=m
+CONFIG_PINCTRL_CANNONLAKE=m
+CONFIG_PINCTRL_CEDARFORK=m
+CONFIG_PINCTRL_CHERRYVIEW=y
+CONFIG_PINCTRL_CS47L15=y
+CONFIG_PINCTRL_CS47L35=y
+CONFIG_PINCTRL_CS47L85=y
+CONFIG_PINCTRL_CS47L90=y
+CONFIG_PINCTRL_CS47L92=y
+CONFIG_PINCTRL_DENVERTON=m
+CONFIG_PINCTRL_ELKHARTLAKE=m
+CONFIG_PINCTRL_EMMITSBURG=m
+CONFIG_PINCTRL_GEMINILAKE=m
+CONFIG_PINCTRL_ICELAKE=m
+CONFIG_PINCTRL_INTEL=m
+CONFIG_PINCTRL_JASPERLAKE=m
+CONFIG_PINCTRL_LAKEFIELD=m
+CONFIG_PINCTRL_LEWISBURG=m
+CONFIG_PINCTRL_LYNXPOINT=m
+CONFIG_PINCTRL_MERRIFIELD=m
+CONFIG_PINCTRL_SUNRISEPOINT=m
+CONFIG_PINCTRL_SX150X=y
+CONFIG_PINCTRL_TIGERLAKE=m
 CONFIG_PMBUS=m
 CONFIG_PM_WAKELOCKS=n
 CONFIG_POWER_RESET=y
@@ -698,6 +699,7 @@ CONFIG_RAID_ATTRS=m
 CONFIG_RANDOM_TRUST_BOOTLOADER=y
 CONFIG_RANDOM_TRUST_CPU=y
 CONFIG_RD_XZ=y
+CONFIG_RD_ZSTD=y
 CONFIG_ROCKCHIP_PHY=y
 CONFIG_S2IO=m
 CONFIG_SATA_ACARD_AHCI=m
