[xorg] Fix MatchDriver for nvidia
Using "nvidia" OR "nvidia-drm"  to hopefully catch
all driver possibilities and start X11 with/without
active screens.

--- a/core/modules/xorg/data/etc/X11/xorg.conf.d/40-nvidia-no-screens.conf
+++ b/core/modules/xorg/data/etc/X11/xorg.conf.d/40-nvidia-no-screens.conf
@@ -1,6 +1,6 @@
 Section "OutputClass"
     Identifier  "NoScreenNvidia"
-    MatchDriver "nvidia"
+    MatchDriver "nvidia|nvidia-drm"
     Driver      "nvidia"
     Option      "AllowEmptyInitialConfiguration" "true"
 EndSection
