--- a/core/modules/qemu/runvirt-plugin-qemu/pom.xml
+++ b/core/modules/qemu/runvirt-plugin-qemu/pom.xml
@@ -22,11 +22,11 @@
     <maven.compiler.target>1.8</maven.compiler.target>
     <maven.compiler.release>8</maven.compiler.release>
   </properties>
-  
+
   <repositories>
     <repository>
       <id>mltk-repo-snapshot</id>
-      <url>http://mltk-services.ruf.uni-freiburg.de:8081/nexus/content/repositories/snapshots/</url>
+      <url>https://mltk-services.ruf.uni-freiburg.de/nexus/content/repositories/snapshots/</url>
       <releases>
         <enabled>false</enabled>
       </releases>
@@ -37,7 +37,7 @@
     </repository>
     <repository>
       <id>mltk-repo-release</id>
-      <url>http://mltk-services.ruf.uni-freiburg.de:8081/nexus/content/repositories/releases/</url>
+      <url>https://mltk-services.ruf.uni-freiburg.de/nexus/content/repositories/releases/</url>
       <releases>
         <enabled>true</enabled>
         <updatePolicy>always</updatePolicy>
