[lightdm-greeter-bwlp] Replace polkit .pkla by equivalent .rules file

--- a/data/kernel.wanted.config
+++ b/data/kernel.wanted.config
@@ -114,9 +114,9 @@ CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_LOOP_FILE_FMT_QCOW=y
 CONFIG_BLK_DEV_LOOP_FILE_FMT_RAW=y
 CONFIG_BLK_DEV_LOOP_MIN_COUNT=8
-CONFIG_BLK_DEV_MD=y
-CONFIG_BLK_DEV_NBD=y
-CONFIG_BLK_DEV_NVME=y
+CONFIG_BLK_DEV_MD=m
+CONFIG_BLK_DEV_NBD=m
+CONFIG_BLK_DEV_NVME=m
 CONFIG_BLK_DEV_PCIESSD_MTIP32XX=y
 CONFIG_BLK_DEV_RAM_SIZE=16384
 CONFIG_BLK_MQ_VIRTIO=y
@@ -546,7 +546,6 @@ CONFIG_NETWORK_PHY_TIMESTAMPING=y
 CONFIG_NETXEN_NIC=m
 CONFIG_NET_CALXEDA_XGMAC=m
 CONFIG_NET_CORE=y
-CONFIG_NET_FAILOVER=y
 CONFIG_NET_PACKET_ENGINE=y
 CONFIG_NET_TULIP=y
 CONFIG_NET_VENDOR_3COM=n
@@ -1204,6 +1203,6 @@ CONFIG_X86_MSR=m
 CONFIG_XFS_FS=y
 CONFIG_ZNET=y
 CONFIG_ZRAM=m
-CONFIG_ZRAM_MEMORY_TRACKING=y
+CONFIG_ZRAM_MEMORY_TRACKING=n
 CONFIG_ZRAM_WRITEBACK=y
 CONFIG_ZSMALLOC=y
