--- a/core/modules/systemd-default-path/data/etc/systemd/system.conf.d/10-openslx-path.conf
+++ b/core/modules/systemd-default-path/data/etc/systemd/system.conf.d/10-openslx-path.conf
@@ -1,2 +1,2 @@
 [Manager]
-DefaultEnvironment="PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/opt/openslx/sbin:/opt/openslx/bin"
+DefaultEnvironment="PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/opt/openslx/sbin:/opt/openslx/bin" "TZ=:/etc/localtime"
