--- a/core/modules/kexec-reboot/data/etc/systemd/system/kexec-load.service
+++ b/core/modules/kexec-reboot/data/etc/systemd/system/kexec-load.service
@@ -2,7 +2,7 @@
 Description=Reload the kernel/initramfs via kexec
 Documentation=man:kexec(8)
 DefaultDependencies=no
-Before=shutdown.target final.target kexec.target
+Before=shutdown.target final.target kexec.target umount.target
 
 [Service]
 Type=oneshot
