[slx-issue] Don't run during shutdown

--- a/core/modules/slx-issue/data/etc/systemd/system/update-etc_issue.service
+++ b/core/modules/slx-issue/data/etc/systemd/system/update-etc_issue.service
@@ -3,6 +3,7 @@ Description=Update /etc/issue
 After=tmp.target
 Before=getty-pre.target getty.target shutdown.target
 DefaultDependencies=no
+Conflicts=shutdown.target
 
 [Service]
 Type=oneshot
