--- a/core/modules/dmidecode/module.conf
+++ b/core/modules/dmidecode/module.conf
@@ -1,5 +1,5 @@
 #!/bin/bash
-REQUIRED_GIT="git://git.savannah.nongnu.org/dmidecode.git"
+REQUIRED_GIT="https://git.savannah.nongnu.org/git/dmidecode.git"
 REQUIRED_BINARIES="
 	dmidecode
 "
