kernel config: Enable simpleDRM again, other random changes

--- a/data/kernel.wanted.config
+++ b/data/kernel.wanted.config
@@ -51,9 +51,9 @@ CONFIG_B44=n
 CONFIG_BACKLIGHT_88PM860X=m
 CONFIG_BACKLIGHT_AAT2870=m
 CONFIG_BACKLIGHT_ADP5520=m
-CONFIG_BACKLIGHT_ADP8860=y
-CONFIG_BACKLIGHT_ADP8870=y
-CONFIG_BACKLIGHT_APPLE=y
+CONFIG_BACKLIGHT_ADP8860=m
+CONFIG_BACKLIGHT_ADP8870=m
+CONFIG_BACKLIGHT_APPLE=m
 CONFIG_BACKLIGHT_ARCXCNN=m
 CONFIG_BACKLIGHT_AS3711=m
 CONFIG_BACKLIGHT_BD6107=m
@@ -65,7 +65,7 @@ CONFIG_BACKLIGHT_GPIO=m
 CONFIG_BACKLIGHT_LM3533=m
 CONFIG_BACKLIGHT_LM3630A=m
 CONFIG_BACKLIGHT_LM3639=m
-CONFIG_BACKLIGHT_LP855X=y
+CONFIG_BACKLIGHT_LP855X=m
 CONFIG_BACKLIGHT_LP8788=m
 CONFIG_BACKLIGHT_LV5207LP=m
 CONFIG_BACKLIGHT_MAX8925=m
@@ -75,7 +75,7 @@ CONFIG_BACKLIGHT_PM8941_WLED=m
 CONFIG_BACKLIGHT_PROGEAR=y
 CONFIG_BACKLIGHT_PWM=m
 CONFIG_BACKLIGHT_RAVE_SP=m
-CONFIG_BACKLIGHT_SAHARA=y
+CONFIG_BACKLIGHT_SAHARA=m
 CONFIG_BACKLIGHT_SKY81452=m
 CONFIG_BACKLIGHT_WM831X=m
 CONFIG_BATTERY_88PM860X=m
@@ -117,7 +117,7 @@ CONFIG_BLK_DEV_LOOP_MIN_COUNT=8
 CONFIG_BLK_DEV_MD=m
 CONFIG_BLK_DEV_NBD=m
 CONFIG_BLK_DEV_NVME=m
-CONFIG_BLK_DEV_PCIESSD_MTIP32XX=y
+CONFIG_BLK_DEV_PCIESSD_MTIP32XX=m
 CONFIG_BLK_DEV_RAM_SIZE=16384
 CONFIG_BLK_MQ_VIRTIO=y
 CONFIG_BLK_RQ_ALLOC_TIME=y
@@ -188,7 +188,6 @@ CONFIG_CRYPTO_LIB_CURVE25519_GENERIC=m
 CONFIG_CRYPTO_LZO=y
 CONFIG_CRYPTO_RNG=y
 CONFIG_CRYPTO_RNG_DEFAULT=y
-CONFIG_CXL_BUS=n
 CONFIG_DE2104X=m
 CONFIG_DE600=y
 CONFIG_DE620=y
@@ -252,7 +251,7 @@ CONFIG_DRM_R128=n
 CONFIG_DRM_RADEON=m
 CONFIG_DRM_RADEON_KMS=y
 CONFIG_DRM_RADEON_USERPTR=y
-CONFIG_DRM_SIMPLEDRM=n
+CONFIG_DRM_SIMPLEDRM=y
 CONFIG_DRM_TTM=m
 CONFIG_DRM_UDL=m
 CONFIG_DRM_USB=m
@@ -503,6 +502,7 @@ CONFIG_KVM_GENERIC_DIRTYLOG_READ_PROTECT=y
 CONFIG_KVM_GUEST=y
 CONFIG_KVM_INTEL=m
 CONFIG_KVM_MMIO=y
+CONFIG_KVM_SMM=y
 CONFIG_KVM_VFIO=y
 CONFIG_LAN743X=m
 CONFIG_LCD_CLASS_DEVICE=y
@@ -801,8 +801,8 @@ CONFIG_SCSI_UFSHCD_PLATFORM=m
 CONFIG_SCSI_UFS_BSG=y
 CONFIG_SCSI_UFS_CDNS_PLATFORM=m
 CONFIG_SCSI_UFS_CRYPTO=y
-CONFIG_SCSI_UFS_DWC_TC_PCI=m
-CONFIG_SCSI_UFS_DWC_TC_PLATFORM=m
+CONFIG_SCSI_UFS_DWC_TC_PCI=n
+CONFIG_SCSI_UFS_DWC_TC_PLATFORM=n
 CONFIG_SCSI_VIRTIO=m
 CONFIG_SCSI_WD719X=m
 CONFIG_SECURITY_APPARMOR=n
@@ -1043,7 +1043,7 @@ CONFIG_SUNGEM=m
 CONFIG_SUNGEM_PHY=y
 CONFIG_SYMBOLIC_ERRNAME=y
 CONFIG_SYNC_FILE=y
-CONFIG_SYSFB_SIMPLEFB=n
+CONFIG_SYSFB_SIMPLEFB=y
 CONFIG_SYSTEM_REVOCATION_KEYS=n
 CONFIG_SYSTEM_TRUSTED_KEYS=n
 CONFIG_TEHUTI=m
@@ -1158,10 +1158,10 @@ CONFIG_VBOXGUEST=m
 CONFIG_VERSION_SIGNATURE=n
 CONFIG_VETH=y
 CONFIG_VFIO=y
+CONFIG_VFIO_CONTAINER=y
 CONFIG_VFIO_IOMMU_TYPE1=y
 CONFIG_VFIO_MDEV=m
 CONFIG_VFIO_MDEV_DEVICE=m
-CONFIG_VFIO_NOIOMMU=y
 CONFIG_VFIO_PCI=y
 CONFIG_VFIO_PCI_IGD=y
 CONFIG_VFIO_PCI_INTX=y
