[lightdm-greeter-bwlp/xorg] Fix: lightdm restarts on failed auth

--- a/core/modules/lightdm-greeter-bwlp/data/etc/lightdm/lightdm.conf.d/10-openslx.conf
+++ b/core/modules/lightdm-greeter-bwlp/data/etc/lightdm/lightdm.conf.d/10-openslx.conf
@@ -1,4 +1,4 @@
-[SeatDefaults]
+[Seat:*]
 greeter-hide-users=true
 greeter-session=qt-lightdm-greeter
 greeter-wrapper=/opt/openslx/lightdm/greeter-wrapper
@@ -8,6 +8,7 @@ guest-wrapper=/opt/openslx/lightdm/guest-session
 
 session-wrapper=/etc/X11/Xsession
 display-setup-script=/etc/X11/Xsetup
+session-setup-script=/etc/X11/Xsession-setup
 session-cleanup-script=/etc/X11/Xreset
 
 [LightDM]
