[remote-access] Use tigervnc

--- a/core/modules/x11vnc/module.conf
+++ b/core/modules/x11vnc/module.conf
@@ -1,7 +1,10 @@
 #!/bin/bash
 REQUIRED_BINARIES="
-	x11vnc
+	X0tigervnc
+	x0tigervncserver
 "
 REQUIRED_DIRECTORIES="
+	/etc/tigervnc
+	/usr/share/perl5/TigerVNC
 "
 REQUIRED_FILES=""
