[x11vnc/tigervnc] Seems we shouldn't remove something still in use
PVS2 is still using x11vnc for screen scraping, so maybe removing that
when we moved to tigervnc for remte access wasn't such a great idea.

Maybe, some day in the future, PVS2 will be extended so it can use
either server.

--- a/core/modules/x11vnc/module.conf
+++ b/core/modules/x11vnc/module.conf
@@ -1,11 +1,7 @@
 #!/bin/bash
 REQUIRED_BINARIES="
-	X0tigervnc
-	x0tigervncserver
-	vncpasswd
+	x11vnc
 "
 REQUIRED_DIRECTORIES="
-	/etc/tigervnc
-	/usr/share/perl5/TigerVNC
 "
 REQUIRED_FILES=""
