[remote-access/tigervnc] tigervncpasswd

--- a/core/modules/tigervnc/module.conf
+++ b/core/modules/tigervnc/module.conf
@@ -1,8 +1,8 @@
 #!/bin/bash
 REQUIRED_BINARIES="
 	X0tigervnc
+	tigervncpasswd
 	x0tigervncserver
-	vncpasswd
 "
 REQUIRED_DIRECTORIES="
 	/etc/tigervnc
