[nvidia-common] Try downloading installer bundle from local server first
We now host a patched version of 390.xx that will compile on Kernel
versions up to 6.6.

--- a/core/modules/nvidia-common/module.conf
+++ b/core/modules/nvidia-common/module.conf
@@ -1,5 +1,10 @@
 #!/bin/bash
-REQUIRED_URL="http://download.nvidia.com/XFree86/Linux-x86_64/%VERSION%/NVIDIA-Linux-x86_64-%VERSION%.run"
+
+#First working URL will be used
+REQUIRED_URL="
+	http://132.230.4.17/install/mltk/NVIDIA-Linux-x86_64-%VERSION%.run
+	http://download.nvidia.com/XFree86/Linux-x86_64/%VERSION%/NVIDIA-Linux-x86_64-%VERSION%.run
+"
 REQUIRED_HTML="http://download.nvidia.com/XFree86/Linux-x86_64/%VERSION%/README/supportedchips.html"
 
 REQUIRED_MODULES="
