--- a/core/modules/hardware-stats/data/etc/systemd/system/hardware-report.service
+++ b/core/modules/hardware-stats/data/etc/systemd/system/hardware-report.service
@@ -1,11 +1,10 @@
 [Unit]
 Description=Send hardware information to boot server
-After=system-check.service hardware-stats.service
-Wants=system-check.service hardware-stats.service
+After=hardware-stats.service
+Wants=hardware-stats.service
 
 [Service]
 Type=oneshot
 ExecStart=/opt/openslx/scripts/systemd-hardware_report
 RemainAfterExit=yes
 ExecStop=/opt/openslx/scripts/shutdown-system_usage_update
-
