--- a/core/modules/system-check/data/etc/systemd/system/system-check.service
+++ b/core/modules/system-check/data/etc/systemd/system/system-check.service
@@ -3,7 +3,7 @@ Description=Report system checks
 Before=display-manager.service
 Wants=network-online.target
 After=network-online.target
-After=hardware-stats.service
+After=gather-hw-info.service
 
 [Service]
 Type=oneshot
