--- a/core/modules/hardware-stats/data/etc/systemd/system/gather-hw-info.service
+++ b/core/modules/hardware-stats/data/etc/systemd/system/gather-hw-info.service
@@ -3,7 +3,8 @@ Description=Gather hardware information about this machine
 Wants=tmp.target
 After=tmp.target
 # Because we might mount something to /tmp/virt there, which we use for ID44 calculation
-After=run-virt-env.service
+After=run-virt-tmpdir.service
+DefaultDependencies=no
 
 [Service]
 Type=oneshot
