--- a/core/modules/run-virt/data/etc/systemd/system/run-virt-env.service
+++ b/core/modules/run-virt/data/etc/systemd/system/run-virt-env.service
@@ -3,6 +3,8 @@ Description=Sets up the virtualization environment
 Before=graphical.target system-check.service
 After=systemd-tmpfiles-setup.service bridge-additional-nics.service
 Wants=systemd-tmpfiles-setup.service system-check.service bridge-additional-nics.service
+Wants=run-virt-tmpdir.service
+After=run-virt-tmpdir.service
 DefaultDependencies=no
 
 [Service]
