--- a/core/modules/dnbd3-proxy-mode/data/etc/systemd/system/dnbd3-local-stage4.service
+++ b/core/modules/dnbd3-proxy-mode/data/etc/systemd/system/dnbd3-local-stage4.service
@@ -4,6 +4,8 @@ Requires=dnbd3-proxy.service
 After=dnbd3-proxy.service
 
 [Service]
-Type=oneshot
+; Do simple, otherwise it will delay system from being considered fully booted up
+Type=simple
 ExecStart=/opt/openslx/scripts/systemd-dnbd3_local_stage4
 RemainAfterExit=true
+Restart=no
