--- a/data/kernel.wanted.config
+++ b/data/kernel.wanted.config
@@ -251,7 +251,7 @@ CONFIG_DRM_R128=n
 CONFIG_DRM_RADEON=m
 CONFIG_DRM_RADEON_KMS=y
 CONFIG_DRM_RADEON_USERPTR=y
-CONFIG_DRM_SIMPLEDRM=y
+CONFIG_DRM_SIMPLEDRM=n
 CONFIG_DRM_TTM=m
 CONFIG_DRM_UDL=m
 CONFIG_DRM_USB=m
