--- a/data/kernel.wanted.config
+++ b/data/kernel.wanted.config
@@ -196,6 +196,7 @@ CONFIG_DEBUG_INFO_BTF=n
 CONFIG_DECNET=n
 CONFIG_DEFAULT_CODEL=n
 CONFIG_DEFAULT_FQ_CODEL=y
+CONFIG_DEFAULT_HOSTNAME="openslx"
 CONFIG_DEFAULT_NET_SCH="fq_codel"
 CONFIG_DELL_UART_BACKLIGHT=m
 CONFIG_DL2K=m
