--- a/.gitignore
+++ b/.gitignore
@@ -11,13 +11,13 @@ openslx.config
 overlay
 rootupper/
 *.so
-src/
+a.out
 *.swp
 test
-tmp/chroot
-tmp/work
-var/builds
-var/log
+/tmp/chroot
+/tmp/work
+/var/builds
+/var/log
 **/winres/tmp/
 **/winres/winres.exe
 /tmp/nfscache
