Big round of cleanup
- Remove a lot of TODOs, either by fixing them or because they became
  irrelevant
- Change all git:// to https://
- Move hwreport and hwinfo from /run to /run/openslx
- Minor script style cleanups
- Remove dead code and functions in various scripts

--- a/core/modules/kernel-vanilla/module.conf
+++ b/core/modules/kernel-vanilla/module.conf
@@ -6,4 +6,4 @@ REQUIRED_DIRECTORIES="
 	/usr/bin
 "
 REQUIRED_KERNEL="${CONFIG_KERNEL_VERSION:-"5.15.81"}"
-REQUIRED_GIT="git://git.kernel.org/pub/scm/linux/kernel/git/stable/linux-stable.git"
+REQUIRED_GIT="https://git.kernel.org/pub/scm/linux/kernel/git/stable/linux-stable.git"
