--- a/core/modules/lightdm-greeter-bwlp/module.conf
+++ b/core/modules/lightdm-greeter-bwlp/module.conf
@@ -2,7 +2,7 @@ REQUIRED_MODULEs="
 	lightdm
 	qt5core
 "
-REQUIRED_GIT="git://git.openslx.org/openslx-ng/slxgreeter"
+REQUIRED_GIT="https://git.openslx.org/openslx-ng/slxgreeter"
 REQUIRED_BINARIES="
 	qt-lightdm-greeter
 "
