--- a/core/modules/pvs2/module.conf
+++ b/core/modules/pvs2/module.conf
@@ -1,5 +1,5 @@
 #!/bin/bash
-REQUIRED_GIT="git://git.openslx.org/pvs2.git"
+REQUIRED_GIT="https://git.openslx.org/pvs2.git"
 REQUIRED_BINARIES="
 	pvsmgr
 	pvsclient
@@ -13,4 +13,3 @@ REQUIRED_MODULES="
 	qt5core
 	x11vnc
 "
-# TODO add libraries
