--- a/core/modules/slxbrowser/module.conf
+++ b/core/modules/slxbrowser/module.conf
@@ -2,7 +2,7 @@
 REQUIRED_MODULES="
 	qt5core
 "
-REQUIRED_GIT="git://git.openslx.org/openslx-ng/slxbrowser.git"
+REQUIRED_GIT="https://git.openslx.org/openslx-ng/slxbrowser.git"
 REQUIRED_PREFIX="/opt/openslx/bin"
 REQUIRED_BINARIES="slxbrowser"
 REQUIRED_LIBRARIES="
