--- a/core/modules/speedcheck/module.conf
+++ b/core/modules/speedcheck/module.conf
@@ -1,4 +1,4 @@
 #!/bin/bash
-REQUIRED_GIT="git://git.openslx.org/openslx-ng/speedcheck.git"
+REQUIRED_GIT="https://git.openslx.org/openslx-ng/speedcheck.git"
 REQUIRED_PREFIX="/opt/openslx/bin"
 REQUIRED_BINARIES="speedcheck"
