--- a/core/modules/vmchooser2/module.conf
+++ b/core/modules/vmchooser2/module.conf
@@ -2,6 +2,6 @@
 REQUIRED_MODULES="
 	qt5core
 "
-REQUIRED_GIT="git://git.openslx.org/openslx-ng/vmchooser2.git"
+REQUIRED_GIT="https://git.openslx.org/openslx-ng/vmchooser2.git"
 REQUIRED_PREFIX="/opt/openslx/bin"
 REQUIRED_BINARIES="vmchooser.real"
