--- a/core/modules/beamergui/module.conf
+++ b/core/modules/beamergui/module.conf
@@ -3,7 +3,7 @@ REQUIRED_MODULES="
 	parse-edid
 	qt5core
 "
-REQUIRED_GIT="git://git.openslx.org/openslx-ng/beamergui.git|2.0"
+REQUIRED_GIT="https://git.openslx.org/openslx-ng/beamergui.git|2.0"
 REQUIRED_BINARIES="
 	beamergui
 "
