--- a/core/modules/printergui/module.conf
+++ b/core/modules/printergui/module.conf
@@ -2,7 +2,7 @@
 REQUIRED_MODULES="
 	slxlog
 "
-REQUIRED_GIT="git://git.openslx.org/openslx-ng/printergui.git"
+REQUIRED_GIT="https://git.openslx.org/openslx-ng/printergui.git"
 REQUIRED_BINARIES="
 	printergui
 	printpwgui
