kernel.config: Need IOMMUFD builtin, so VFIO can be builtin

--- a/data/kernel.wanted.config
+++ b/data/kernel.wanted.config
@@ -449,6 +449,7 @@ CONFIG_INTEL_ISH_FIRMWARE_DOWNLOADER=m
 CONFIG_INTEL_MEI_HDCP=m
 CONFIG_INTEL_SPEED_SELECT_INTERFACE=m
 CONFIG_INTEL_TH_ACPI=m
+CONFIG_IOMMUFD=y
 CONFIG_IP1000=y
 CONFIG_IP_NF_FILTER=y
 CONFIG_IP_NF_MANGLE=y
