kernel: Disable AMT watchdog (mei_wdt), buggy after standby
iTCO_wdt seems the one we actually want, but if mei_wdt registers first,
this is what will be /dev/watchdog0, i.e. the default for systemd.

--- a/data/kernel.wanted.config
+++ b/data/kernel.wanted.config
@@ -447,6 +447,7 @@ CONFIG_INTEL_IDXD_SVM=y
 CONFIG_INTEL_IOMMU_DEFAULT_ON=n
 CONFIG_INTEL_ISH_FIRMWARE_DOWNLOADER=m
 CONFIG_INTEL_MEI_HDCP=m
+CONFIG_INTEL_MEI_WDT=n
 CONFIG_INTEL_SPEED_SELECT_INTERFACE=m
 CONFIG_INTEL_TH_ACPI=m
 CONFIG_IOMMUFD=y
