kernel: iTCO watchdog seems buggy on several devices, disable
Observed on multiple devices that the iTCO watchdog does nothing on
timeout, and echoed on the web in places like:
https://community.intel.com/t5/Processors/Using-linux-iTCO-wdt-driver-on-i3-7100/m-p/1126815

Just rely on the softdog primarily, or more "enterprisey" solutions
as found in servers (to be tested regarding reliability).

--- a/data/kernel.wanted.config
+++ b/data/kernel.wanted.config
@@ -462,6 +462,7 @@ CONFIG_IP_PNP_RARP=n
 CONFIG_IRQ_SIM=n
 CONFIG_ISA_BUS=y
 CONFIG_ISA_BUS_API=y
+CONFIG_ITCO_WDT=n
 CONFIG_IXGB=m
 CONFIG_IXGBE=m
 CONFIG_IXGBEVF=m
@@ -1020,6 +1021,7 @@ CONFIG_SND_USB_USX2Y=m
 CONFIG_SND_USB_VARIAX=m
 CONFIG_SND_VIRTIO=m
 CONFIG_SND_X86=y
+CONFIG_SOFT_WATCHDOG=m
 CONFIG_SPI_INTEL_SPI_PLATFORM=n
 CONFIG_SQUASHFS=y
 CONFIG_SQUASHFS_FILE_DIRECT=y
@@ -1199,6 +1201,7 @@ CONFIG_VORTEX=m
 CONFIG_VSOCKETS=m
 CONFIG_VSOCKETS_LOOPBACK=m
 CONFIG_VXGE=m
+CONFIG_WATCHDOG_NOWAYOUT=y
 CONFIG_WINBOND_840=m
 CONFIG_X86_5LEVEL=n
 CONFIG_X86_ACPI_CPUFREQ=m
