[qemu] libvirtd isn't actually needed

--- a/core/modules/qemu/data/etc/systemd/system/qemu.service
+++ b/core/modules/qemu/data/etc/systemd/system/qemu.service
@@ -1,16 +1,14 @@
 [Unit]
 Description=Sets up the QEMU hypervisor
 Requires=run-virt-env.service
-Requires=libvirtd.service
 Requires=qemu-kvm.service
 After=run-virt-env.service
-After=libvirtd.service
 After=qemu-kvm.service
 
 [Service]
 Type=oneshot
 RemainAfterExit=yes
-ExecStart=/opt/openslx/scripts/systemd-qemu_env start
+ExecStart=/opt/openslx/scripts/systemd-qemu_env
 
 [Install]
 WantedBy=graphical.target
