--- a/data/kernel.wanted.config
+++ b/data/kernel.wanted.config
@@ -1,6 +1,7 @@
 CONFIG_64BIT_TIME=y
 CONFIG_8139CP=n
 CONFIG_8139TOO=n
+CONFIG_9P_FS=n
 CONFIG_ACENIC=m
 CONFIG_ACPI=y
 CONFIG_ACPI_AC=y
@@ -19,6 +20,7 @@ CONFIG_ACPI_TAD=m
 CONFIG_ACPI_THERMAL=y
 CONFIG_ACPI_VIOT=y
 CONFIG_ACPI_WMI=m
+CONFIG_AFS_FS=n
 CONFIG_AGP=n
 CONFIG_ALLOW_LOCKDOWN_LIFT=y
 CONFIG_ALTERA_TSE=m
@@ -140,6 +142,8 @@ CONFIG_CASSINI=m
 CONFIG_CDROM=m
 CONFIG_CEC_NOTIFIER=y
 CONFIG_CEC_PLATFORM_DRIVERS=y
+CONFIG_CEPH_FS=n
+CONFIG_CEPH_LIB=n
 CONFIG_CGROUP_MISC=y
 CONFIG_CHELSIO_IPSEC_INLINE=y
 CONFIG_CHELSIO_T1=m
@@ -153,6 +157,7 @@ CONFIG_CIFS_ALLOW_INSECURE_LEGACY=y
 CONFIG_CIFS_DFS_UPCALL=y
 CONFIG_CIFS_SMB2=y
 CONFIG_CIFS_SMB311=y
+CONFIG_CIFS_SMB_DIRECT=y
 CONFIG_CIFS_SWN_UPCALL=y
 CONFIG_CIFS_UPCALL=y
 CONFIG_CIFS_WEAK_PW_HASH=y
@@ -365,6 +370,7 @@ CONFIG_FUSION_SPI=m
 CONFIG_FW_LOADER_COMPRESS=y
 CONFIG_GADGET_UAC1=n
 CONFIG_GENERIC_GPIO=y
+CONFIG_GFS2_FS=n
 CONFIG_GPIOLIB=y
 CONFIG_GPIOLIB_IRQCHIP=y
 CONFIG_GPIO_ACPI=y
@@ -378,6 +384,7 @@ CONFIG_GPIO_TPS65910=y
 CONFIG_HAPPYMEAL=n
 CONFIG_HAS_IOMEM=y
 CONFIG_HDMI_LPE_AUDIO=m
+CONFIG_HFS_FS=n
 CONFIG_HID=y
 CONFIG_HIDRAW=y
 CONFIG_HID_BATTERY_STRENGTH=y
@@ -548,6 +555,7 @@ CONFIG_NE2K_PCI=m
 CONFIG_NETDEVICES=y
 CONFIG_NETWORK_PHY_TIMESTAMPING=y
 CONFIG_NETXEN_NIC=m
+CONFIG_NET_9P=n
 CONFIG_NET_CALXEDA_XGMAC=m
 CONFIG_NET_CORE=y
 CONFIG_NET_PACKET_ENGINE=y
@@ -616,6 +624,7 @@ CONFIG_NFS_V4_1_MIGRATION=y
 CONFIG_NF_CONNTRACK_BRIDGE=m
 CONFIG_NF_NAT_MASQUERADE=y
 CONFIG_NF_NAT_MASQUERADE_IPV4=y
+CONFIG_NILFS2_FS=n
 CONFIG_NIU=m
 CONFIG_NOP_USB_XCEIV=m
 CONFIG_NO_HZ=y
@@ -634,6 +643,7 @@ CONFIG_NVME_TARGET_PASSTHRU=y
 CONFIG_NVME_TARGET_RDMA=m
 CONFIG_NVME_TARGET_TCP=m
 CONFIG_NVME_TCP=m
+CONFIG_OCFS2_FS=n
 CONFIG_ORC_UNWINDER=y
 CONFIG_OVERLAYFS_FS=y
 CONFIG_OVERLAY_FS=m
@@ -703,6 +713,7 @@ CONFIG_RANDOM_TRUST_BOOTLOADER=y
 CONFIG_RANDOM_TRUST_CPU=y
 CONFIG_RD_XZ=y
 CONFIG_RD_ZSTD=y
+CONFIG_REISERFS_FS=n
 CONFIG_ROCKCHIP_PHY=y
 CONFIG_S2IO=m
 CONFIG_SATA_ACARD_AHCI=m
@@ -769,6 +780,7 @@ CONFIG_SCSI_ISCI=m
 CONFIG_SCSI_LOWLEVEL=y
 CONFIG_SCSI_LOWLEVEL_PCMCIA=y
 CONFIG_SCSI_LPFC=m
+CONFIG_SCSI_LPFC=n
 CONFIG_SCSI_MOD=y
 CONFIG_SCSI_MPT2SAS=m
 CONFIG_SCSI_MPT2SAS_MAX_SGE=128
@@ -1067,7 +1079,9 @@ CONFIG_TUN=y
 CONFIG_TYPEC=m
 CONFIG_TYPEC_DP_ALTMODE=m
 CONFIG_TYPHOON=m
+CONFIG_UBIFS_FS=n
 CONFIG_UDMABUF=y
+CONFIG_UFS_FS=n
 CONFIG_UIO=y
 CONFIG_ULI526X=m
 CONFIG_USB=y
@@ -1208,6 +1222,7 @@ CONFIG_X86_ACPI_CPUFREQ=m
 CONFIG_X86_MSR=m
 CONFIG_XFS_FS=y
 CONFIG_ZNET=y
+CONFIG_ZONEFS_FS=n
 CONFIG_ZRAM=m
 CONFIG_ZRAM_MEMORY_TRACKING=n
 CONFIG_ZRAM_WRITEBACK=y
